<resources>
    <string name="app_name">PrEmpotrados</string>
    <string name="AddButton">Add</string>
    <string name="SearchButton">Search</string>
    <string name="InputPlaceholder">Enter Name</string>
    <string name="Back">Back</string>
    <string name="name">name</string>
    <string name="phone">phone</string>
    <string name="error">Error</string>
    <string name="calling">Calling</string>
    <string name="errorMessage">An error ocurred</string>
    <string name="InsertMessage">User inserted</string>
    <string name="UpdateMessage">User updated</string>
    <string name="errorNotFound">User not found</string>
    <string name="call">Call</string>

</resources>
